--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "dependencies": {
     "jquery": "~2.1.3",
-    "bootstrap": "~3.3.1"
+    "bootstrap": "~3.3.1",
+    "bootstrap-table": "~1.5.0"
   }
 }
